# ChessVision

./: requirements-dev.txt  requirements.txt  setup.cfg
