[metadata]
name = chessvision
version = 0.0.1
author = Gudbrand Tandberg
author_email = gudbrandduff@gmail.com
description = Chessvision package

[options]
include_package_data = True
packages = 
    chessvision
    chessvision.data_processing
    chessvision.model
python_requires = >=3.8
install_requires =
    opencv-python==4.8.1.78
    tensorflow==2.12.1
    python-chess
    matplotlib
    protobuf==3.20.2

[options.packages.find]
include = chessvision
